--- a/Login.html
+++ b/Login.html
@@ -14,11 +14,11 @@
 <body>
     <div class="row login-container  vh-100 vw-100">
         <div class="col-12 col-lg-6 justify-content-center align-items-center login-banner-container">
-            <img src="/images/student-login-bg.png" alt="" class="student-login-bg-image w-100 h-100">
+            <img src="/nithya-project/images/student-login-bg.png" alt="" class="student-login-bg-image w-100 h-100">
         </div>
         <div class="col-12 col-lg-6">
             <div class="row p-3">
-                <img src="/images/svm-logo-2.jpg" alt="" class="college-logo mb-3">
+                <img src="/nithya-project//images/svm-logo-2.jpg" alt="" class="college-logo mb-3">
             </div>
 
             <div>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class=" d-flex pb-3">
-                        <a class="btn btn-primary col-lg-12 col-md-12 col-12" href="/staff-list.html" role="button">Login</a>
+                        <a class="btn btn-primary col-lg-12 col-md-12 col-12" href="/nithya-project/staff-list.php" role="button">Login</a>
                     </div>
                     <div class="d-flex  justify-content-center">
                         <p class="pe-3">Don't have an account?</p>
