--- a/create-student.html
+++ b/create-student.html
@@ -48,31 +48,33 @@
                                         <span class="ps-3" style="color: #4a4a4a">Dashboard</span>
                                     </a>
                                 </li>
-                                <!-- My clients -->
-                                <li class="nav-item d-flex mb-4">
-                                    <a href="#" class="nav-link w-100 d-flex ps-3 align-items-center active">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="19"
-                                            viewBox="0 0 15 14" fill="none">
-                                            <path
-                                                d="M10.125 0C8.26102 0 6.75 1.51125 6.75 3.375C6.75 5.23875 8.26102 6.75 10.125 6.75C11.989 6.75 13.5 5.23875 13.5 3.375C13.5 1.51125 11.989 0 10.125 0ZM4.5 0.75C2.84317 0.75 1.5 2.09325 1.5 3.75C1.5 5.40675 2.84317 6.75 4.5 6.75C5.12205 6.75 5.71125 6.56025 6.2109 6.21075C6.55043 5.97375 6.6357 5.496 6.3984 5.15625C6.1611 4.8165 5.70668 4.755 5.36715 4.992C5.11748 5.16675 4.81215 5.25 4.5 5.25C3.67155 5.25 3 4.57875 3 3.75C3 2.92125 3.67155 2.25 4.5 2.25C4.74465 2.25 4.96845 2.304 5.17965 2.41425C5.54715 2.6055 6.0198 2.47651 6.2109 2.10901C6.40208 1.74226 6.25027 1.26899 5.88285 1.07849C5.45902 0.857991 4.98705 0.75 4.5 0.75ZM10.125 1.5C11.1605 1.5 12 2.33925 12 3.375C12 4.41075 11.1605 5.25 10.125 5.25C9.08947 5.25 8.25 4.41075 8.25 3.375C8.25 2.33925 9.08947 1.5 10.125 1.5ZM2.29688 7.758C0.9213 8.32575 0 9.717 0 11.25V12.75C0 13.164 0.335775 13.5 0.75 13.5H3.75C4.16423 13.5 4.5 13.164 4.5 12.75C4.5 12.336 4.16423 12 3.75 12H1.5V11.25C1.5 10.407 2.00002 9.63301 2.57475 9.29251C3.11527 9.52051 3.68708 9.69301 4.19558 9.73576C4.60838 9.77101 4.9806 9.45976 5.01562 9.04651C5.05065 8.63401 4.75238 8.28452 4.33965 8.24927C4.0104 8.22152 3.65055 8.1225 3.23438 7.9455C3.13387 7.90275 3.07552 7.869 2.88285 7.78125C2.69392 7.695 2.48872 7.6785 2.29688 7.758ZM7.54688 7.758C6.1713 8.32575 5.25 9.717 5.25 11.25V12.75C5.25 13.164 5.58577 13.5 6 13.5H14.25C14.6642 13.5 15 13.164 15 12.75V11.25C15 9.753 14.0736 8.3955 12.7031 7.8045C12.5102 7.72125 12.2854 7.719 12.0938 7.8045C11.4302 8.10225 10.7837 8.25 10.125 8.25C9.4686 8.25 8.81985 8.094 8.13285 7.78125C7.94392 7.695 7.73873 7.6785 7.54688 7.758ZM7.83525 9.29251C8.54385 9.56101 9.39818 9.75 10.125 9.75C10.8461 9.75 11.6651 9.57373 12.3594 9.31723C13.0364 9.70273 13.5 10.4242 13.5 11.25V12H6.75V11.25C6.75 10.3763 7.24192 9.63976 7.83525 9.29251Z"
-                                                fill="white" />
-                                        </svg>
-                                        <span class="ps-3" style="color: white">My Staff</span>
-                                    </a>
-                                </li>
-                                <!-- My employees -->
-                                <li class="nav-item d-flex mb-4">
-                                    <a href=""
-                                        class="nav-link w-100 d-flex ps-3 align-items-center">
+                                    <!-- My staff -->
+                                    <li class="nav-item d-flex mb-4">
+                                        <a href="/nithya-project/staff-list.php"
+                                                class="nav-link w-100 d-flex ps-3 align-items-center">
+                                               
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="19"
+                                                    viewBox="0 0 15 14" fill="none">
+                                                    <path
+                                                        d="M10.125 0C8.26102 0 6.75 1.51125 6.75 3.375C6.75 5.23875 8.26102 6.75 10.125 6.75C11.989 6.75 13.5 5.23875 13.5 3.375C13.5 1.51125 11.989 0 10.125 0ZM4.5 0.75C2.84317 0.75 1.5 2.09325 1.5 3.75C1.5 5.40675 2.84317 6.75 4.5 6.75C5.12205 6.75 5.71125 6.56025 6.2109 6.21075C6.55043 5.97375 6.6357 5.496 6.3984 5.15625C6.1611 4.8165 5.70668 4.755 5.36715 4.992C5.11748 5.16675 4.81215 5.25 4.5 5.25C3.67155 5.25 3 4.57875 3 3.75C3 2.92125 3.67155 2.25 4.5 2.25C4.74465 2.25 4.96845 2.304 5.17965 2.41425C5.54715 2.6055 6.0198 2.47651 6.2109 2.10901C6.40208 1.74226 6.25027 1.26899 5.88285 1.07849C5.45902 0.857991 4.98705 0.75 4.5 0.75ZM10.125 1.5C11.1605 1.5 12 2.33925 12 3.375C12 4.41075 11.1605 5.25 10.125 5.25C9.08947 5.25 8.25 4.41075 8.25 3.375C8.25 2.33925 9.08947 1.5 10.125 1.5ZM2.29688 7.758C0.9213 8.32575 0 9.717 0 11.25V12.75C0 13.164 0.335775 13.5 0.75 13.5H3.75C4.16423 13.5 4.5 13.164 4.5 12.75C4.5 12.336 4.16423 12 3.75 12H1.5V11.25C1.5 10.407 2.00002 9.63301 2.57475 9.29251C3.11527 9.52051 3.68708 9.69301 4.19558 9.73576C4.60838 9.77101 4.9806 9.45976 5.01562 9.04651C5.05065 8.63401 4.75238 8.28452 4.33965 8.24927C4.0104 8.22152 3.65055 8.1225 3.23438 7.9455C3.13387 7.90275 3.07552 7.869 2.88285 7.78125C2.69392 7.695 2.48872 7.6785 2.29688 7.758ZM7.54688 7.758C6.1713 8.32575 5.25 9.717 5.25 11.25V12.75C5.25 13.164 5.58577 13.5 6 13.5H14.25C14.6642 13.5 15 13.164 15 12.75V11.25C15 9.753 14.0736 8.3955 12.7031 7.8045C12.5102 7.72125 12.2854 7.719 12.0938 7.8045C11.4302 8.10225 10.7837 8.25 10.125 8.25C9.4686 8.25 8.81985 8.094 8.13285 7.78125C7.94392 7.695 7.73873 7.6785 7.54688 7.758ZM7.83525 9.29251C8.54385 9.56101 9.39818 9.75 10.125 9.75C10.8461 9.75 11.6651 9.57373 12.3594 9.31723C13.0364 9.70273 13.5 10.4242 13.5 11.25V12H6.75V11.25C6.75 10.3763 7.24192 9.63976 7.83525 9.29251Z"
+                                                        fill="#4A4A4A"/>
+                                                </svg>
+                                                <span class="ps-3" style="color: #4a4a4a">My Staff</span>
+                                            </a>
+                                        </li>
+                                        <!-- My student -->
+                                        <li class="nav-item d-flex mb-4">
+                                          
+                                        <a href="#" class="nav-link w-100 d-flex ps-3 align-items-center active">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                                            viewBox="0 0 12 15" fill="none">
-                                            <path
-                                                d="M6 0C3.89705 0 2.19231 1.67917 2.19231 3.75C2.19231 5.82083 3.89705 7.5 6 7.5C8.10295 7.5 9.80769 5.82083 9.80769 3.75C9.80769 1.67917 8.10295 0 6 0ZM6 1.66667C7.16828 1.66667 8.11539 2.59917 8.11539 3.75C8.11539 4.90083 7.16828 5.83333 6 5.83333C4.83172 5.83333 3.88462 4.90083 3.88462 3.75C3.88462 2.59917 4.83172 1.66667 6 1.66667ZM3.09135 8.62C1.53942 9.25083 0.5 10.7967 0.5 12.5V14.1667C0.5 14.6267 0.878823 15 1.34615 15H10.6538C11.1212 15 11.5 14.6267 11.5 14.1667V12.5C11.5 10.8367 10.4548 9.32834 8.90865 8.67167C8.69102 8.57917 8.43743 8.57667 8.22115 8.67167C7.47248 9.00251 6.74309 9.16667 6 9.16667C5.25945 9.16667 4.52752 8.99333 3.75245 8.64583C3.5393 8.55 3.30779 8.53166 3.09135 8.62ZM3.41669 10.325C4.21614 10.6233 5.17999 10.8333 6 10.8333C6.81358 10.8333 7.73758 10.6375 8.52086 10.3525C9.2846 10.7808 9.80769 11.5825 9.80769 12.5V13.3333H2.19231V12.5C2.19231 11.5292 2.7473 10.7108 3.41669 10.325Z"
-                                                fill="#4A4A4A" />
-                                        </svg>
-                                        <span class="ps-3" style="color: #4a4a4a">My Students</span>
-                                    </a>
-                                </li>
+                                                    viewBox="0 0 12 15" fill="none">
+                                                    <path
+                                                        d="M6 0C3.89705 0 2.19231 1.67917 2.19231 3.75C2.19231 5.82083 3.89705 7.5 6 7.5C8.10295 7.5 9.80769 5.82083 9.80769 3.75C9.80769 1.67917 8.10295 0 6 0ZM6 1.66667C7.16828 1.66667 8.11539 2.59917 8.11539 3.75C8.11539 4.90083 7.16828 5.83333 6 5.83333C4.83172 5.83333 3.88462 4.90083 3.88462 3.75C3.88462 2.59917 4.83172 1.66667 6 1.66667ZM3.09135 8.62C1.53942 9.25083 0.5 10.7967 0.5 12.5V14.1667C0.5 14.6267 0.878823 15 1.34615 15H10.6538C11.1212 15 11.5 14.6267 11.5 14.1667V12.5C11.5 10.8367 10.4548 9.32834 8.90865 8.67167C8.69102 8.57917 8.43743 8.57667 8.22115 8.67167C7.47248 9.00251 6.74309 9.16667 6 9.16667C5.25945 9.16667 4.52752 8.99333 3.75245 8.64583C3.5393 8.55 3.30779 8.53166 3.09135 8.62ZM3.41669 10.325C4.21614 10.6233 5.17999 10.8333 6 10.8333C6.81358 10.8333 7.73758 10.6375 8.52086 10.3525C9.2846 10.7808 9.80769 11.5825 9.80769 12.5V13.3333H2.19231V12.5C2.19231 11.5292 2.7473 10.7108 3.41669 10.325Z"
+                                                        fill="white" />
+                                                </svg>
+                                                <span class="ps-3" style="color: white">My Student</span>
+                                            </a>
+                                        </li>
 
                                 <!-- My timesheet -->
                                 <li class="nav-item d-flex mb-4">
@@ -216,22 +218,22 @@
 
                 <div class="col-12 ps-4 mt-3">
                     <div class="project-heading">
-                        <h2>Create Staff</h2>
+                        <h2>Create Student</h2>
                         <p>
                             <a href="/rework-timesheet/My Clients/Clients_List.html"
-                                style="text-decoration: none; color: #000000">Staff List</a>
+                                style="text-decoration: none; color: #000000">Student List</a>
                             /
-                            <span>Create Staff</span>
+                            <span>Create Student</span>
                         </p>
                     </div>
                 </div>
 
-                <form action="create.php" method="post" class="client-form">
+                <form action="create-student.php" method="post" class="client-form">
                     <div class="ps-4">
                         <h5>Personal Information</h5>
                     </div>
                     <div class="ps-4">
-                        <label for="Logo" class="form-label-1">Staff Photo</label>
+                        <label for="Logo" class="form-label-1">Student Photo</label>
                     </div>
 
                     <!-- upload button -->
@@ -240,7 +242,7 @@
                         <div class="col-3 ps-4">
                             <div class="image-upload d-flex align-items-center Uploadlogo mt-1">
                                 <label for="file-input">
-                                    <span class="ms-3 Uploadlogo-text pe-5">Upload Staff Photo</span>
+                                    <span class="ms-3 Uploadlogo-text pe-5">Upload Photo</span>
                                     <img src="images/upload-icon.svg" alt="upload-icon" class="upload-icon ms-5 mb-1" />
                                 </label>
                                 <input id="file-input" type="file" />
@@ -295,12 +297,6 @@
                     <div class="row col-md-12 ps-4 mt-4">
                         <h5>Contact Information</h5>
                         <div class="col-md-3">
-                            <label for="Company name " class="form-label-1">Email Address
-                            </label>
-                            <input type="email" class="form-control mt-1" id="Company name" name="email"
-                                placeholder="Ezhil@gmail.com" />
-                        </div>
-                        <div class="col-md-3">
                             <label for="Location " class="form-label-1">Phone Number</label>
                             <input type="text" class="form-control mt-1" id="Location" name="phonenumber"
                                 placeholder="7639182013" name="phonenumber" />
@@ -317,29 +313,15 @@
                     <div class="row col-md-12 ps-4 mt-4">
                         <h5>Professional Information</h5>
                         <div class="col-md-3">
-                            <label for="Company name " class="form-label-1">Staff User ID
-                            </label>
-                            <input type="text" class="form-control mt-1" id="Company name" placeholder="EzhilVM01" name="staffuserid" />
-                        </div>
-                        <div class="col-md-3">
-                            <label for="Location " class="form-label-1">Password</label>
-                            <input type="password" class="form-control mt-1" id="Location" placeholder="Ezhil@123" name="password" />
-                        </div>
-                        <div class="col-md-3">
                             <label for="Location " class="form-label-1">Department</label>
                             <input type="text" class="form-control mt-1" id="Location" name="department"
                                 placeholder="Computer Science" />
-                        </div>
-                        <div class="col-md-3">
-                            <label for="Company name " class="form-label-1">Position/Job Title
-                            </label>
-                            <input type="text" class="form-control mt-1" id="Company name" placeholder="Professor" name="position" />
                         </div>
                     </div>
                     <div class="row col-md-12 ps-4 mt-4">
                         <div class="col-md-3">
                             <label for="Location " class="form-label-1">Date of Joining</label>
-                            <input type="date" class="form-control mt-1" id="Location" placeholder="Arasi" name="joindate"/>
+                            <input type="date" class="form-control mt-1" id="Location" placeholder="Arasi" name="datejoin"/>
                         </div>
                     </div>
                     <hr class="mt-4">
@@ -348,37 +330,13 @@
                     <div class="row col-md-12 ps-4 mt-4">
                         <h5>Educational Information</h5>
                         <div class="col-md-3">
-                            <label for="Company name " class="form-label-1">Highest Degree Attained
+                            <label for="Company name " class="form-label-1">Highest studies
                             </label>
                             <input type="text" class="form-control mt-1" id="Company name" placeholder="MCA" name="degeree" />
                         </div>
                         <div class="col-md-3">
-                            <label for="Location " class="form-label-1">Major/Field of Study</label>
-                            <input type="text" class="form-control mt-1" id="Location" placeholder="Computer Science" name="field" />
-                        </div>
-                        <div class="col-md-3">
                             <label for="Location " class="form-label-1">Institution</label>
                             <input type="text" class="form-control mt-1" id="Location" placeholder="Vidya Mandir" name="institution" />
-                        </div>
-                        <div class="col-md-3">
-                            <label for="Company name " class="form-label-1">Graduation Year
-                            </label>
-                            <input type="date" class="form-control mt-1" id="Company name" placeholder="Professor" name="graduationyear" />
-                        </div>
-                    </div>
-                    <div class="row col-md-12 ps-4 mt-4">
-                        <div class="col-md-3">
-                            <label for="Location " class="form-label-1">Previous Workplaces</label>
-                            <input type="text" class="form-control mt-1" id="Location" placeholder="Adhiyaman " name="pwork" />
-                        </div>
-                        <div class="col-md-3">
-                            <label for="Location " class="form-label-1">Positions Held</label>
-                            <input type="text" class="form-control mt-1" id="Location" placeholder="Professor" name="positionheld"/>
-                        </div>
-                        <div class="col-md-3">
-                            <label for="Company name " class="form-label-1">Years of Experience
-                            </label>
-                            <input type="text" class="form-control mt-1" id="Company name" placeholder="5 Years" name="experiance"/>
                         </div>
                     </div>
                     <hr class="mt-4">
@@ -417,7 +375,7 @@
                             </button>
                             <button type="submit" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop1">
-                                Create Staff
+                                Create Student
                             </button>
                         </div>
                     </div>
@@ -438,7 +396,7 @@
                                     alt="create staff sucess popup icon" />
                             </div>
                             <h5 class="d-flex justify-content-center mt-3">
-                                Staff Created Successfully
+                                Student Created Successfully
                             </h5>
                             <div class="d-flex justify-content-center mt-3 pb-3">
                                 <a class="btn btn-primary client-create-pop-button d-flex justify-content-center align-items-center"
